<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.tyurvib</groupId>
  <artifactId>Transactions-folia</artifactId>
  <version>1.4.1</version>
  <packaging>jar</packaging>

  <name>Transactions</name>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

  <repositories>
      <repository>
          <id>papermc-repo</id>
          <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
      <repository>
          <id>anvilgui-repo</id>
          <url>https://repo.codemc.io/repository/maven-public/</url>
      </repository>
  </repositories>

  <dependencies>
      <dependency>
          <groupId>io.papermc.paper</groupId>
          <artifactId>paper-api</artifactId>
          <version>1.21.9-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.github.MilkBowl</groupId>
          <artifactId>VaultAPI</artifactId>
          <version>1.7</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.github.AuroraLS3</groupId>
          <artifactId>Vault-Events</artifactId>
          <version>master-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.mojang</groupId>
          <artifactId>authlib</artifactId>
          <version>1.5.21</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>net.wesjd</groupId>
          <artifactId>anvilgui</artifactId>
          <version>1.5.3-SNAPSHOT</version>
      </dependency>
  </dependencies>
</project>
